# woodenfish-mcp-host-library

./: README.md  mcp_config.example.json  model_config.example.json  pyproject.toml
woodenfish_mcp_host/cli/: README.md  __init__.py  cli.py  cli_types.py  migrate.py
woodenfish_mcp_host/host/: chat.py  errors.py  host.py  prompt.py
woodenfish_mcp_host/host/agents/: __init__.py  agent_factory.py  chat_agent.py  tools_in_prompt.py
woodenfish_mcp_host/host/conf/: __init__.py  llm.py
woodenfish_mcp_host/host/helpers/: __init__.py  checkpointer.py  context.py
woodenfish_mcp_host/host/store/: sqlite.py
woodenfish_mcp_host/host/tools/: __init__.py  echo.py  log.py  mcp_server.py  misc.py  model_types.py  stdio_server.py
woodenfish_mcp_host/httpd/: _main.py  abort_controller.py  app.py  dependencies.py  rate_limiter.py  server.py
woodenfish_mcp_host/httpd/conf/: arguments.py  command_alias.py  httpd_service.py  mcp_servers.py  misc.py  models.py  prompt.py  system_prompt.py
woodenfish_mcp_host/httpd/database/: __init__.py  migrate.py  models.py  orm_models.py
woodenfish_mcp_host/httpd/database/migrations/: env.py  script.py.mako
woodenfish_mcp_host/httpd/database/msg_store/: abstract.py  base.py  (+2 more)
woodenfish_mcp_host/httpd/middlewares/: __init__.py  general.py  kwargs.py
woodenfish_mcp_host/httpd/routers/: chat.py  config.py  model_verify.py  models.py  openai.py  tools.py  utils.py
woodenfish_mcp_host/httpd/store/: __init__.py  cache.py  local.py  store.py
woodenfish_mcp_host/models/: __init__.py  fake.py
woodenfish_mcp_host/scheduler/: __init__.py
(+3 files in other folders)
