[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "woodenfish-mcp-host"
version = "0.1"
requires-python = ">=3.12"
dependencies = [
    "langchain-anthropic>=0.3.13",
    "langchain-core>=0.3.59",
    "langchain-deepseek>=0.1.3",
    "langchain-google-genai>=2.1.4",
    "langchain-openai>=0.3.16",
    "langchain-ollama>=0.3.2",
    "langchain-mistralai>=0.2.10",
    "langchain-aws>=0.2.22",
    "langchain>=0.3.25",
    "langgraph-checkpoint-postgres>=2.0.21",
    "langgraph-checkpoint-sqlite>=2.0.7",
    "langgraph-prebuilt>=0.1.8",
    "langgraph>=0.4.3",
    "fastapi>=0.115.12",
    "mcp>=1.7.1",
    "anyio>=4.9.0",
    "pydantic>=2.11.4",
    "pywin32>=310; sys_platform == 'win32' or platform_system == 'Windows'",
    "sqlite-vec>=0.1.6",
    "psycopg[binary]>=3.2.5",
    "alembic>=1.15.2,< 1.16",
    "sqlalchemy[asyncio]>=2.0.40",
    "psycopg2-binary>=2.9.10",
    "asyncpg>=0.30.0",
    "python-multipart>=0.0.20",
    "pillow>=11.1.0",
    "websockets >= 15.0.1",
]

[project.scripts]
woodenfish_httpd = "woodenfish_mcp_host.httpd._main:main"
woodenfish_cli = "woodenfish_mcp_host.cli:main"
